# PicoTelegraphDisplay

./: .gitignore  README.md  main.py  oled.py  sample.txt
DisplayProject/: CMakeLists.txt  DisplayProject.c
DisplayProject/lib/UPS/: CMakeLists.txt  Pico_UPS.c  Pico_UPS.h
SampleText/Frankenstein-MaryShelley/: 01-Letter1.txt  02-Letter2.txt  03-Letter3.txt  04-Letter4.txt  06-Chapter02.txt  07-Chapter03.txt  08-Chapter04.txt  09-Chapter05.txt  10-Chapter06.txt  11-Chapter07.txt  12-Chapter08.txt  13-Chapter09.txt  14-Chapter10.txt  15-Chapter11.txt  16-Chapter12.txt  17-Chapter13.txt  18-Chapter14.txt  19-Chapter15.txt  20-Chapter16.txt  21-Chapter17.txt  22-Chapter18.txt  24-Chapter20.txt  25-Chapter21.txt  26-Chapter22.txt  27-Chapter23.txt  28-Chapter24.txt
Screen/: PicoOLED.py
